--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 authors = [
   { name="Alex Guillin", email="cap0n3@protonmail.com" },
 ]
-description = "Table2Dict converts an html table (1D or 2D) in a list, a dictionnary or get usful informations about table."
+description = "Table2Dict converts an html table (1D or 2D) in a list, a dictionnary or get useful informations about table."
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.8"
